--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "removeComments": false,
     "noImplicitAny": false
   },
+  "compileOnSave": false,
   "exclude": [
     "node_modules",
     "build"
