--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
+#npm, typescript
 typings/
 node_modules/
 appjs/
+
+#IntelliJ-Related
+# Created by https://www.gitignore.io/
+# User-specific stuff:
+.idea/workspace.xml
+.idea/tasks.xml
+
+# Sensitive or high-churn files:
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/dataSources.local.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
+
+## File-based project format:
+*.iws
+
+#IntelliJ-Related-End
